DemoOrg/src/Apttus Quote/Proposal-Configuration Integration/objects/Apttus_Proposal__Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Accept__c</fullName>
        <description>Accept the quote/proposal</description>
        <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Presented&quot;), HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalAccept?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Accept&quot;, &quot;Accept&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigurationFinalizedDate__c</fullName>
        <description>Date when the configuration was finalized for the quote/proposal</description>
        <label>Configuration Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConfigurationSyncDate__c</fullName>
        <description>Date when the configuration was synchronized for the quote/proposal</description>
        <inlineHelpText>Date when the configuration was synchronized for the quote/proposal</inlineHelpText>
        <label>Configuration Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Configure__c</fullName>
        <description>Configure products for the quote/proposal</description>
        <formula>IF ( LEN( PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Quotes/Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PricingDate__c</fullName>
        <description>The pricing date, The product list price is determined based on this date.</description>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SyncWithOpportunity__c</fullName>
        <description>Synchronize the quote/proposal with the associated opportunity</description>
        <formula>IF ( AND(LEN(Apttus_Proposal__Opportunity__c ) &gt; 0, Apttus_Proposal__Primary__c) , HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalSyncWithOpportunity?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_SynchronizeWithOpportunity&quot;, &quot;Sync with Opportunity&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synchronize with Opportunity</label>
        <type>Text</type>
    </fields>
</CustomObject>